--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <div id="content">
     <strong class="blue">Why Slack?</strong>
-    <p>In CMSC434, you will be participating in a three phase, <a href="http://www.cs.umd.edu/class/spring2017/cmsc434/project-overview.shtml" target="_blank">semester-long project</a>. There are plenty of communication tools out there, but for this class we settled with Slack. Slack is one of the most powerful team communication tools currently available. Companies such as Samsung, LinkedIn, and Ebay all use Slack on a daily basis. Using Slack will allow you to communicate effectively with your teammates and get a feel for a tool that most modern workplaces are using.</p>
+    <p>In CMSC434, you will be participating in a multi-phase, <a href="http://www.cs.umd.edu/class/spring2017/cmsc434/project-overview.shtml" target="_blank">semester-long project</a>. There are plenty of communication tools out there, but for this class we decided to use Slack. Slack is one of the most powerful team communication tools currently available. Companies such as Samsung, LinkedIn, and Ebay all use Slack on a daily basis. Using Slack will support effectively communicating with your teammates and get a feel for a tool that most modern workplaces are using.</p>
     <br />
     <center><a href="https://get.slack.help/hc/en-us/articles/218080037-Getting-started-for-new-users" target="_blank">Here's a Slack guide on the basics of what Slack can do.</a></center>
     <br /><br />
@@ -100,7 +100,7 @@
         <li>Congrats, you are now part of our Slack channel!</li>
     </ol>
     
-    <p>There are a few different options for accessing Slack once you're signed up. You can access via the class' web url: <a href="https://cmsc434-spring2017.slack.com" target="_blank">https://cmsc434-spring2017.slack.com</a>. You can also install Slack <a href="https://slack.com/downloads/" target="_blank">on your computer</a> (we highly recommend this). You can also install the mobile app on your phone.</p>
+    <p>There are a few different options for accessing Slack once you're signed up. You can access via the class' web url: <a href="https://cmsc434-spring2017.slack.com" target="_blank">https://cmsc434-spring2017.slack.com</a>. You can also install Slack <a href="https://slack.com/downloads/" target="_blank">on your computer</a>. You can also install the mobile app on your phone.</p>
     
     <p>You'll automatically be a part of the #announcements channel, where class-wide announcement will be made. You'll also have a private team channel where you can communicate with fellow team members. You are also able to communicate with classmates individually.</p>
     <br /><br />
