Updated signup steps.

--- a/index.html
+++ b/index.html
@@ -90,11 +90,9 @@
     <strong class="green">Join CMSC434's Slack Team</strong>
     <p>Joining Slack is simple. Here's a step by step guide:</p>
     <ol>
-        <li>Go to the <a href="https://cmsc434-spring2017.slack.com/signup" target="_blank">signup page</a> for CMSC434's Slack</li>
-        <li>Enter your <em>terpmail</em> address and click "Create Account"</li>
-        <li>You will be sent an email - log in and view it (if it does not show in your inbox, make sure to check your spam folder)</li>
-        <li>Click the "Confirm Email" button in the email you were sent</li>
-        <li>You will be brought to a screen that will allow you to create a username and password - have your username be your first name followed by your last name<ul><li>Ex. John Doe → johndoe</li></ul></li>
+        <li>Check your email for an invite to CMSC434's Slack<ul><li>Make sure to also check your Spam folder</li><li>If you cannot find an invite, contact one of the TAs and ask them to invite you</li></ul></li>
+        <li>Click the "Join Team" button in the email you were sent</li>
+        <li>You will be brought to a screen that will allow you to create a username - have your username be your first name followed by your last name<ul><li>Ex. John Doe → johndoe</li></ul></li>
         <li>Create a password</li>
         <li>Read the terms of service and accept</li>
         <li>Congrats, you are now part of our Slack channel!</li>
