Minor wording changes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <strong class="green">Join CMSC434's Slack Team</strong>
     <p>Joining Slack is simple. Here's a step by step guide:</p>
     <ol>
-        <li>Check your email for an invite to CMSC434's Slack<ul><li>Make sure to also check your Spam folder</li><li>If you cannot find an invite, contact one of the TAs and ask them to invite you</li></ul></li>
+        <li>Check your email for an invite to CMSC434's Slack<ul><li>Make sure to also check your Spam folder</li><li>If you cannot find an invite, send an email to egolub@glue.umd.edu</li></ul></li>
         <li>Click the "Join Team" button in the email you were sent</li>
         <li>You will be brought to a screen that will allow you to create a username - have your username be your first name followed by your last name<ul><li>Ex. John Doe → johndoe</li></ul></li>
         <li>Create a password</li>
@@ -103,5 +103,5 @@
     <p>You'll automatically be a part of the #announcements channel, where class-wide announcement will be made. You'll also have a private team channel where you can communicate with fellow team members. You are also able to communicate with classmates individually.</p>
     <br /><br />
     <strong class="red">Having troubles?</strong>
-    <p>If you are having troubles joining the CMSC434 Slack team, feel free to email Jake Hughes (jakehughesumd@gmail.com) and he'll help you get set up.</p><br /><br />
+    <p>If you are having troubles joining the CMSC434 Slack team, send an email to egolub@glue.umd.edu and we'll help you get set up.</p><br /><br />
 </div>
